<resources>
    <string name="app_name">Assignment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="item_name">Item Name</string>



    <string name="content_description">Content Description</string>
    <string name="header_text">Header Text</string>
    <string name="type">Type</string>
    <string name="and">and</string>
    <string name="categories">Categories</string>
    <string name="recents_search_item">Recents Search Item</string>
    <string name="loading">Loading</string>
    <string name="product_details">Product Details</string>
    <string name="product_list">Product List</string>
    <string name="description">Cheer on your favorite red and white team in eye-popping style with these product! Each pair is made of 100 percent cotton for a comfortable, breathable fit regardless of the weather and includes easily adjustable shoulder straps for fans with long torsos. </string>
    <string name="size">Size</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_name">Product Name</string>
    <string name="no_data">No Data Available</string>
    <string name="description_tag">Description</string>
    <string name="internet_connection">Internet Connection Not Available</string>
</resources>
