<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".listItems.DetailsActivity"
    android:background="@color/bg_color"
    >


    <include
        android:id="@+id/toolbar_header"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:id="@+id/buying_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/add_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_to_cart"
            android:padding="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/solid_black"
            android:textStyle="bold"
            android:background="@drawable/bg_square_shape"
            />
        <TextView
            android:id="@+id/buy_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buy_now"
            android:padding="15dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_square_pink"
            android:gravity="center"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_header"
        android:layout_above="@id/buying_layout"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/image_icon"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/ic_icon"
                    />

                <LinearLayout
                    android:id="@+id/linear_layout_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_icon"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="02dp"
                    android:paddingLeft="02dp">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="12dp"
                    android:background="@drawable/bg_round_shape"
                    android:gravity="center"
                    android:layout_below="@id/linear_layout_view"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true">

                    <ImageView
                        android:id="@+id/image_wishlist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_wishlist"
                        android:tint="@color/gray" />
                </LinearLayout>
            </RelativeLayout>
            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_item"
                android:padding="05dp"
                android:textColor="@color/solid_black"
                android:text="@string/product_name"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/description_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_details"
                android:padding="05dp"
                android:textColor="@color/gray"
                android:text="@string/description_tag"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <LinearLayout
                android:id="@+id/description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.65"
                    android:minLines="2"
                    android:textSize="@dimen/text_size_details"
                    android:padding="05dp"
                    android:textColor="@color/gray"
                    android:text="@string/description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <ImageView
                    android:id="@+id/share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45"
                    android:contentDescription="@string/content_description"
                    android:padding="0.5dp"
                    android:src="@android:drawable/ic_menu_share" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rating_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_layout"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description"
                    android:src="@android:drawable/star_big_off"
                    android:tint="@color/yellow" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description"
                    android:src="@android:drawable/star_big_off"
                    android:tint="@color/yellow" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description"
                    android:src="@android:drawable/star_big_off"
                    android:tint="@color/yellow" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description"
                    android:src="@android:drawable/star_big_off"
                    android:tint="@color/yellow" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description"
                    android:src="@android:drawable/star_big_off"
                    android:tint="@color/yellow" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1200"
                    android:textColor="@color/solid_black"
                    android:textSize="@dimen/text_size_item"
                    android:padding="02dp"
                    android:textStyle="bold"
                    android:layout_marginTop="08dp"/>

                <TextView
                    android:id="@+id/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textColor="@color/solid_black"
                    android:textSize="@dimen/text_size_item"
                    android:padding="02dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"

                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/fragment_container_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"
        android:clickable="true"
        android:gravity="center"
        android:visibility="gone"
        android:onClick="onClickLayout"
        tools:ignore="OnClick">

        <LinearLayout
            android:id="@+id/fragment_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" />
    </LinearLayout>
</RelativeLayout>